Renamed app.py, and updated application

--- a/swagger/create_skade.yaml
+++ b/swagger/create_skade.yaml
@@ -2,6 +2,7 @@ create_skade:
   tags:
     - Skade
   summary: Opret en ny skade
+  description: Opret en skadesrapport for en bil. Validerer bil og admin ID mod andre microservices.
   requestBody:
     required: true
     content:
@@ -12,21 +13,27 @@ create_skade:
             bil_id:
               type: integer
               example: 101
+              description: ID for den bil, skaden er tilknyttet.
             stelnummer:
               type: string
               example: "WBA1234567890"
+              description: Bilens stelnummer.
             beskrivelse:
               type: string
               example: "Ridse i højre dør"
+              description: Kort beskrivelse af skaden.
             omkostning:
               type: number
               example: 1500.75
+              description: Estimerede reparationsomkostninger.
             forsikringsstatus:
               type: string
               example: "Under behandling"
+              description: Status for forsikringsbehandlingen.
             admin_id:
               type: integer
               example: 1
+              description: ID for admin-medarbejderen, der håndterer skaden.
   responses:
     '201':
       description: Skade oprettet
@@ -38,6 +45,15 @@ create_skade:
               message:
                 type: string
                 example: "Skade oprettet"
+    '400':
+      description: Ugyldige inputdata
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+                example: "Invalid bil_id or admin_id"
     '500':
       description: Fejl opstod
-  
